Color corrections, banner size on mobile corrected v-1.01

--- a/src/app/shared/modal/modal.component.css
+++ b/src/app/shared/modal/modal.component.css
@@ -17,4 +17,5 @@
 
   .btn {
     margin-top: auto;
+    background-color: #343a40;
   }
